--- a/eth.cfg
+++ b/eth.cfg
@@ -27,9 +27,10 @@ bind "c"						"use weapon_smokegrenade"
 bind "alt"						"+jump"
 bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
-bind "mwheelup"					"+lookatweapon"
-bind "capslock"					"incrementvar volume 0.6 1 0.4;incrementvar voice_scale 0.1 0.2 0.1"
-bind "6"						"incrementvar volume 0.1 0.6 0.5"
+bind "mwheelup"					"+lookatweapon;r_cleardecals"
+bind "tab"						"+showscores;r_cleardecals"
+bind "capslock"					"incrementvar volume 0.6 1 0.4;incrementvar voice_scale 0.1 0.2 0.1"
+bind "6"						"incrementvar volume 0.05 0.6 0.55"
 bind "8"						"incrementvar cl_crosshaircolor 0 5 1"
 bind "0"						"say que ota"
 
@@ -41,7 +42,7 @@ alias "-qq_slot2"				"slot2"
 bind "mouse4"					"+qq_slot2"
 alias "back_config_slot1"		"slot1;bind mouse5 +qq_slot1"
 alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
-alias "slot3_config"			"slot3;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
+alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
 bind "3"						"slot3_config"
 
 alias crosshair_size_change crosshair_small
@@ -64,7 +65,7 @@ cl_crosshairalpha				"255"
 cl_crosshaircolor_b				"0"
 cl_crosshaircolor_g				"0"
 cl_crosshaircolor_r				"255"
-cl_crosshaircolor				"2"
+cl_crosshaircolor				"4"
 cl_crosshairdot					"0"
 cl_crosshairgap					"-3"
 cl_crosshairsize				"2"
@@ -171,8 +172,8 @@ mm_dedicated_search_maxping		"55"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"1.2"
-zoom_sensitivity_ratio_mouse	"1.1"
+sensitivity						"0.7"
+zoom_sensitivity_ratio_mouse	"1.3"
 m_rawinput						"1"
 
 m_customaccel					"0"
@@ -186,7 +187,7 @@ m_mouseaccel2					"0"
 
 //---------------------------------------------------------------------------------SOM
 
-volume							"0.1"
+volume							"0.05"
 voice_scale						"0.2"
 voice_enable					"1"
 snd_menumusic_volume			"0"
@@ -226,4 +227,4 @@ host_writeconfig
 
 //PC
 // -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -high -w 1280 -h 960 +exec eth.cfg
-// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1200 -h 960 +exec eth.cfg
+// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1280 -h 960 +exec eth.cfg
