Retirado binds desnecessárias

--- a/eth.cfg
+++ b/eth.cfg
@@ -2,8 +2,6 @@
 
 clear
 
-unbind mwheelup
-
 bind "scrolllock"				"buy vest"						//"ScrollLock"
 bind "numlock"					"buy vesthelm"					//"PauseBreak"
 bind "del"						"buy mac10;buy mp9"				//"delete"
@@ -18,6 +16,7 @@ bind "rightarrow"				"buy smokegrenade"				//"right arrow"
 bind "uparrow"					"buy incgrenade;buy molotov"	//"up arrow"
 bind "backspace"				"buy defuser"					//"Backspace"
 
+bind "3"						"slot3;+lookatweapon"
 bind "v"						"+jump;-attack;-jump"
 bind "f"						"use weapon_flashbang"
 bind "4"						"use weapon_hegrenade"
@@ -29,26 +28,18 @@ bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
 bind "mwheelup"					"+lookatweapon;r_cleardecals"
 bind "tab"						"+showscores;r_cleardecals"
-bind "capslock"					"incrementvar volume 0.6 1 0.4;incrementvar voice_scale 0.1 0.2 0.1"
+bind "capslock"					"incrementvar volume 0.6 1 0.4;incrementvar voice_scale 0.1 0.2 0.1"
+
 bind "6"						"incrementvar volume 0.05 0.6 0.55"
-bind "8"						"incrementvar cl_crosshaircolor 0 5 1"
 bind "0"						"say que ota"
 
-alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
+alias "+qq_slot1"				"slot3"
 alias "-qq_slot1"				"slot1"
 bind "mouse5"					"+qq_slot1"
-alias "+qq_slot2"				"slot3;bind mouse5 back_config_slot1"
+
+alias "+qq_slot2"				"slot3"
 alias "-qq_slot2"				"slot2"
 bind "mouse4"					"+qq_slot2"
-alias "back_config_slot1"		"slot1;bind mouse5 +qq_slot1"
-alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
-alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
-bind "3"						"slot3_config"
-
-alias crosshair_size_change crosshair_small
-alias "crosshair_small"			"cl_crosshairsize 2;alias crosshair_size_change crosshair_big"
-alias "crosshair_big"			"cl_crosshairsize 4;alias crosshair_size_change crosshair_small"
-bind "7"						"crosshair_size_change"
 
 bind "F1"						"demo_pause;noclip"
 bind "F2"						"demo_resume"
@@ -56,7 +47,6 @@ bind "F3"						"demo_timescale 1"
 bind "F4"						"demo_timescale 8"
 bind "F5"						"disconnect"
 bind "F6"						"mp_restartgame 1"
-
 
 
 //---------------------------------------------------------------------------------CROSSHAIR
@@ -215,16 +205,7 @@ mat_queue_mode					"2"
 
 host_writeconfig
 
+// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1280 -h 960 +exec eth.cfg
+
 // desabilitar otimização de tela inteira nas opções de cs go
 // alto desempenho em configurações de desempenho
-
-
-
-//---------------------------------------------------------------------------------START CS
-
-//NOTEBOOK
-// -novid -nodvid -nod3d9ex -nojoy -tickrate 128 -noaafonts -mat_queue_mode 2 -threads 4 -high -w 800 -h 600 +exec autoexec.cfg
-
-//PC
-// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -high -w 1280 -h 960 +exec eth.cfg
-// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1280 -h 960 +exec eth.cfg
