Corrigido bug na bind do QQ | Alterado bind de olhar para a arma

--- a/eth.cfg
+++ b/eth.cfg
@@ -16,7 +16,6 @@ bind "rightarrow"				"buy smokegrenade"				//"right arrow"
 bind "uparrow"					"buy incgrenade;buy molotov"	//"up arrow"
 bind "backspace"				"buy defuser"					//"Backspace"
 
-bind "3"						"slot3;+lookatweapon"
 bind "v"						"+jump;-attack;-jump"
 bind "f"						"use weapon_flashbang"
 bind "4"						"use weapon_hegrenade"
@@ -26,19 +25,24 @@ bind "c"						"use weapon_smokegrenade"
 bind "alt"						"+jump"
 bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
-bind "mwheelup"					"+lookatweapon;r_cleardecals"
 bind "tab"						"+showscores;r_cleardecals"
+bind "capslock"                 "+lookatweapon;r_cleardecals"
 
 bind "6"						"incrementvar volume 0.05 0.6 0.55"
 bind "0"						"say que ota"
 
-alias "+qq_slot1"				"slot3"
+alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
 alias "-qq_slot1"				"slot1"
 bind "mouse5"					"+qq_slot1"
-
-alias "+qq_slot2"				"slot3"
+	
+alias "+qq_slot2"				"slot3;bind mouse5 back_config_slot1"
 alias "-qq_slot2"				"slot2"
 bind "mouse4"					"+qq_slot2"
+
+alias "back_config_slot1"		"slot1;bind mouse5 +qq_slot1"
+alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
+alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
+bind "3"						"slot3_config"
 
 bind "F1"						"demo_pause;noclip"
 bind "F2"						"demo_resume"
@@ -46,6 +50,8 @@ bind "F3"						"demo_timescale 1"
 bind "F4"						"demo_timescale 8"
 bind "F5"						"disconnect"
 bind "F6"						"mp_restartgame 1"
+
+unbind mwheelup
 
 
 //---------------------------------------------------------------------------------CROSSHAIR
