--- a/eth.cfg
+++ b/eth.cfg
@@ -20,16 +20,18 @@ bind "v"						"+jump;-attack;-jump"
 bind "f"						"use weapon_flashbang"
 bind "4"						"use weapon_hegrenade"
 bind "z"						"use weapon_incgrenade; use weapon_molotov"
-bind "x"						"use weapon_decoy"
+bind "x"						"use weapon_decoy;noclip"
 bind "c"						"use weapon_smokegrenade"
 bind "alt"						"+jump"
 bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
+bind "mwheelup"                	"+lookatweapon;r_cleardecals"
 bind "tab"						"+showscores;r_cleardecals"
-bind "capslock"                 "+lookatweapon;r_cleardecals"
-
 bind "6"						"incrementvar volume 0.05 0.6 0.55"
-bind "0"						"say que ota"
+
+alias "+nadecrosshair"			"cl_crosshairsize 1000; cl_crosshairthickness 0.5"
+alias "-nadecrosshair"			"cl_crosshairsize 2; cl_crosshairthickness 1"
+bind "capslock"					"+nadecrosshair"
 
 alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
 alias "-qq_slot1"				"slot1"
@@ -44,14 +46,13 @@ alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
 alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
 bind "3"						"slot3_config"
 
-bind "F1"						"demo_pause;noclip"
+bind "F1"						"demo_pause"
 bind "F2"						"demo_resume"
 bind "F3"						"demo_timescale 1"
 bind "F4"						"demo_timescale 8"
 bind "F5"						"disconnect"
 bind "F6"						"mp_restartgame 1"
 
-unbind mwheelup
 
 
 //---------------------------------------------------------------------------------CROSSHAIR
