Alterado binds | Formatado eth.cfg | Alterado cfg de treino e x1

--- a/x1.cfg
+++ b/x1.cfg
@@ -19,6 +19,7 @@ mp_t_default_primary weapon_ak47
 mp_ct_default_primary weapon_ak47
 mp_t_default_secondary weapon_deagle
 mp_ct_default_secondary weapon_deagle
+mp_friendlyfire 1
 
 mp_warmup_end
 mp_restartgame 1
@@ -48,5 +49,6 @@ echo "mp_t_default_primary weapon_ak47"
 echo "mp_ct_default_primary weapon_ak47"
 echo "mp_t_default_secondary weapon_deagle"
 echo "mp_ct_default_secondary weapon_deagle"
+echo "mp_friendlyfire 1"
 echo ""
 echo "//mp_damage_headshot_only 1"
