--- a/eth.cfg
+++ b/eth.cfg
@@ -1,4 +1,9 @@
-﻿//---------------------------------------------------------------------------------BINDS
+﻿// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1280 -h 960 +exec eth.cfg
+
+// desabilitar otimização de tela inteira nas opções de cs go
+// alto desempenho em configurações de desempenho
+
+//---------------------------------------------------------------------------------BINDS
 
 clear
 
@@ -25,9 +30,9 @@ bind "c"						"use weapon_smokegrenade"
 bind "alt"						"+jump"
 bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
-bind "mwheelup"                	"+lookatweapon;r_cleardecals"
+bind "mwheelup"                	"r_cleardecals"
+bind "n"                		"+lookatweapon"
 bind "tab"						"+showscores;r_cleardecals"
-bind "6"						"incrementvar volume 0.05 0.6 0.55"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000; cl_crosshairthickness 0.5"
 alias "-nadecrosshair"			"cl_crosshairsize 2; cl_crosshairthickness 1"
@@ -50,8 +55,10 @@ bind "F1"						"demo_pause"
 bind "F2"						"demo_resume"
 bind "F3"						"demo_timescale 1"
 bind "F4"						"demo_timescale 8"
-bind "F5"						"disconnect"
-bind "F6"						"mp_restartgame 1"
+bind "F5"						"mp_restartgame 1"
+bind "F6"						"incrementvar volume 0.05 0.6 0.55"
+bind "F7"						"disconnect"
+bind "F8"						"quit"
 
 
 
@@ -75,21 +82,22 @@ cl_crosshair_sniper_width		"2"
 
 
 
-//---------------------------------------------------------------------------------FOV
+//---------------------------------------------------------------------------------VIEWMODEL
 
 viewmodel_fov					"68"
 viewmodel_offset_x				"2"
-viewmodel_offset_y				"1.5"
+viewmodel_offset_y				"1.5"		//TODO TESTAR O DO VSM
 viewmodel_offset_z				"-1"
 viewmodel_presetpos				"0"
-viewmodel_recoil				"0"
+cl_righthand					"0"
 
-cl_viewmodel_shift_left_amt		"0.5"
-cl_viewmodel_shift_right_amt	"0.25"
+viewmodel_recoil				"0"
+cl_viewmodel_shift_left_amt		"0.5"		//TODO TESTAR O DO VSM
+cl_viewmodel_shift_right_amt	"0.25"		//TODO TESTAR O DO VSM
 cl_bob_lower_amt				"5"
 cl_bobamt_lat					"0.1"
 cl_bobamt_vert					"0.1"
-cl_bobcycle						"2"
+cl_bobcycle						"2"			//TODO TESTAR OUTROS VALORES
 
 
 
@@ -104,7 +112,7 @@ cl_radar_rotate					"1"
 
 
 
-//---------------------------------------------------------------------------------HUD
+//---------------------------------------------------------------------------------NET GRAPH
 
 net_graph						"1"
 net_graphpos					"1"
@@ -118,36 +126,36 @@ net_graphtext					"1"
 net_maxroutable					"1200"
 net_scale						"5"
 
-hud_scaling						"0.8"	//tamanho das coisas como texto da sua vida, na tela. padrao eh 1, diminuo para poluir menos a tela
-safezonex						"0.90"	//centraliza a HUD no eixo X. O mais central possivel, assim nao viajo muito com os olhos para ver o radar.
-safezoney						"1"		//centraliza no eixo Y
-cl_showloadout					"1"		//mostra sempre o inventario, como por exemplo qtas granadas. 0 desaparece depois de um tempo
-mat_monitorgamma				"1.6"	//brilho do monitor.
+
+
+//---------------------------------------------------------------------------------HUD
+
+hud_scaling						"0.8"
+safezonex						"0.90"
+safezoney						"1"
+cl_showloadout					"1"
+mat_monitorgamma				"1.6"
 mat_monitorgamma_tv_enabled		"0"
-cl_righthand					"0"		//1 para arma na direita, 0 para arma na esquerda
 cl_hud_background_alpha			"0.5"
-cl_hud_playercount_showcount	"0"		//0 = mostra os avatares de quem esta vivo, 1 = mostra apenas quantos estao vivos. 
-cl_hud_color					"10"	//deixo o hud com cor rosada :)
-cl_hud_healthammo_style			"1"		//não mostra animação de balas no HUD, elas distraem. deixo o mais simples possível.
-cl_hud_playercount_pos			"0"		//posicao do relogio e mostrador de quem esta vivo: 0 em cima, 1 em baixo 
-cl_hud_bomb_under_radar			"0"		//posicao do indicador de C4: 1 = abaixo do radar (padrao), 0 no inventario, canto inferior direito.
-cl_autowepswitch				"0"		//pra nao equipar automaticamente quando catar uma arma do chao.
-cl_autohelp						"1"		//pra ver , por exemplo, se glock ou famas esta em burst ou auto.
-cl_showhelp						"0"		//desativa mensagens que apenas distraem
-cl_color						"3"		//eu prefiro a cor roxa ->  0 = yellow, 1 = purple, 2 = green, 3 = blue,  4 = orange.
-cl_use_opens_buy_menu			"0"		//o comando use (letra e) nao vai poder ser usado pra abrir o menu de compras.
-gameinstructor_enable			"0"		//desativa setas apontando pra bomba caida no chao, por exemplo, que distraem o jogador
-hud_showtargetid				"1"		//mostra o nome do seu inimigo quando vc coloca a mira nele
+cl_hud_playercount_showcount	"0"
+cl_hud_color					"10"
+cl_hud_healthammo_style			"1"
+cl_hud_playercount_pos			"0"
+cl_hud_bomb_under_radar			"0"
+cl_autowepswitch				"0"
+cl_autohelp						"1"
+cl_showhelp						"0"
+cl_color						"3"
+cl_use_opens_buy_menu			"0"
+gameinstructor_enable			"0"
+hud_showtargetid				"1"
 fps_max_menu					"0"
 fps_max							"0"
 closeonbuy						"1"
 cl_disablefreezecam				"0"
-cl_disablehtmlmotd				"0"		// sem ads quando conectando nos servers. //modificado simple
-cl_forcepreload					"0"		//melhora a estabilidade forcando o jogo a carregar tudo na memoria durant eo loading, mas aumenta o tempo de loading. //modificado simple
-r_dynamic						"1"
 con_enable						"1"
 r_drawtracers_firstperson		"1"
-mapoverview_allow_client_draw	"1"		//Allow a client to draw on the map overview
+mapoverview_allow_client_draw	"1"
 ui_steam_overlay_notification_position	"topleft"
 
 
@@ -198,20 +206,20 @@ snd_mvp_volume					"0"
 snd_hwcompat					"1"
 
 //desativei pq tava achando estranho os sons
-//snd_front_headphone_position		"45.0"; //default = 90.0
-//snd_rear_headphone_position		"90.0"; //default = 90.0
-//snd_headphone_pan_exponent		"1.2"; //default = 1.0		kscerato = 2
+//snd_front_headphone_position		"45.0" //default = 90.0
+//snd_rear_headphone_position		"90.0" //default = 90.0
+//snd_headphone_pan_exponent		"1.2" //default = 1.0		kscerato = 2
 //snd_headphone_pan_radial_weight	"0.5" //default = 1.0		kscerato = 2
 
 
 
-//---------------------------------------------------------------------------------OUTROS
+//---------------------------------------------------------------------------------DESEMPENHO
 
 mat_queue_mode					"2"
+cl_disablehtmlmotd				"0"
+cl_forcepreload					"0"
+r_dynamic						"1"
+
+
 
 host_writeconfig
-
-// -full -novid -refresh 144 -freq 144 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1280 -h 960 +exec eth.cfg
-
-// desabilitar otimização de tela inteira nas opções de cs go
-// alto desempenho em configurações de desempenho
