--- a/eth.cfg
+++ b/eth.cfg
@@ -7,6 +7,7 @@
 
 clear
 
+
 bind "scrolllock"				"buy vest"						//"ScrollLock"
 bind "numlock"					"buy vesthelm"					//"PauseBreak"
 bind "del"						"buy mac10;buy mp9"				//"delete"
@@ -32,7 +33,6 @@ bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
 bind "mwheelup"                	"r_cleardecals"
 bind "n"                		"+lookatweapon"
-bind "tab"						"+showscores;r_cleardecals"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000; cl_crosshairthickness 0.5"
 alias "-nadecrosshair"			"cl_crosshairsize 2; cl_crosshairthickness 1"
@@ -86,18 +86,19 @@ cl_crosshair_sniper_width		"2"
 
 viewmodel_fov					"68"
 viewmodel_offset_x				"2"
-viewmodel_offset_y				"1.5"		//TODO TESTAR O DO VSM
+viewmodel_offset_y				"2"
 viewmodel_offset_z				"-1"
 viewmodel_presetpos				"0"
+viewmodel_offset_randomize		"0"
 cl_righthand					"0"
 
 viewmodel_recoil				"0"
-cl_viewmodel_shift_left_amt		"0.5"		//TODO TESTAR O DO VSM
-cl_viewmodel_shift_right_amt	"0.25"		//TODO TESTAR O DO VSM
+cl_viewmodel_shift_left_amt		"0.5"
+cl_viewmodel_shift_right_amt	"0.25"
 cl_bob_lower_amt				"5"
 cl_bobamt_lat					"0.1"
 cl_bobamt_vert					"0.1"
-cl_bobcycle						"2"			//TODO TESTAR OUTROS VALORES
+cl_bobcycle						"2"
 
 
 
