Alterado configurações de desempenho; Launch Options | Adicionado linhas no Fps Benchmark | Removido comandos não utilizados

--- a/eth.cfg
+++ b/eth.cfg
@@ -1,7 +1,8 @@
-﻿// -full -novid -refresh 240 -freq 240 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1024 -h 768 +exec eth.cfg
+﻿//----OLD
+// -full -novid -refresh 240 -freq 240 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1024 -h 768 +exec eth.cfg
 
-// desabilitar otimização de tela inteira nas opções de cs go
-// alto desempenho em configurações de desempenho
+//----NEW
+// -novid -tickrate 128 +exec eth.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -164,12 +165,12 @@ ui_steam_overlay_notification_position	"topleft"
 //---------------------------------------------------------------------------------REDE
 
 rate							"786432"
-cl_updaterate					"128"		//modificado simple
-//cl_interp_ratio				"1"			//modificado simple
-//cl_interp						"0"			//modificado simple
-//cl_lagcompensation			"1"			//modificado simple
-//cl_predict					"1"			//modificado simple
-//cl_predictweapons				"1"			//modificado simple
+cl_updaterate					"128"		//CONFERIR VALORES
+//cl_interp_ratio				"1"			//CONFERIR VALORES
+//cl_interp						"0"			//CONFERIR VALORES
+//cl_lagcompensation			"1"			//CONFERIR VALORES
+//cl_predict					"1"			//CONFERIR VALORES
+//cl_predictweapons				"1"			//CONFERIR VALORES
 cl_cmdrate						"128"
 mm_dedicated_search_maxping		"55"
 
@@ -206,20 +207,14 @@ snd_mute_mvp_music_live_players	"1"
 snd_mvp_volume					"0"
 snd_hwcompat					"1"
 
-//desativei pq tava achando estranho os sons
-//snd_front_headphone_position		"45.0" //default = 90.0
-//snd_rear_headphone_position		"90.0" //default = 90.0
-//snd_headphone_pan_exponent		"1.2" //default = 1.0		kscerato = 2
-//snd_headphone_pan_radial_weight	"0.5" //default = 1.0		kscerato = 2
-
 
 
 //---------------------------------------------------------------------------------DESEMPENHO
 
-mat_queue_mode					"2"
-cl_disablehtmlmotd				"0"
-cl_forcepreload					"0"
-r_dynamic						"1"
+mat_queue_mode					"-1"
+cl_disablehtmlmotd				"1"
+cl_forcepreload					"1"
+r_dynamic						"0"
 
 
 
