Alterado crosshair, launch options e net graph

--- a/eth.cfg
+++ b/eth.cfg
@@ -1,8 +1,4 @@
-﻿//----OLD
-// -full -novid -refresh 240 -freq 240 -tickrate 128 -d3d9ex -mat_queue_mode 2 -untrusted -noubershader -high -w 1024 -h 768 +exec eth.cfg
-
-//----NEW
-// -novid -tickrate 128 +exec eth.cfg
+﻿// -novid -tickrate 128
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -35,8 +31,8 @@ bind "mwheeldown"				"+jump"
 bind "mwheelup"                	"r_cleardecals"
 bind "n"                		"+lookatweapon"
 
-alias "+nadecrosshair"			"cl_crosshairsize 1000; cl_crosshairthickness 0.5"
-alias "-nadecrosshair"			"cl_crosshairsize 2; cl_crosshairthickness 1"
+alias "+nadecrosshair"			"cl_crosshairsize 1000"
+alias "-nadecrosshair"			"cl_crosshairsize 2"
 bind "capslock"					"+nadecrosshair"
 
 alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
@@ -75,7 +71,7 @@ cl_crosshairgap					"-3"
 cl_crosshairsize				"2"
 cl_crosshairstyle				"4"
 cl_crosshairusealpha			"1"
-cl_crosshairthickness			"1"
+cl_crosshairthickness			"0.5"
 cl_fixedcrosshairgap			"-1"
 cl_crosshair_outlinethickness	"1"
 cl_crosshair_drawoutline		"0"
@@ -119,7 +115,7 @@ cl_radar_rotate					"1"
 net_graph						"1"
 net_graphpos					"1"
 net_graphproportionalfont		"0"
-net_graphheight					"40"
+net_graphheight					"55"
 net_graphmsecs					"400"
 net_graphshowinterp				"1"
 net_graphshowlatency			"1"
