Alterado sensi para 1.4 e launch options

--- a/eth.cfg
+++ b/eth.cfg
@@ -1,4 +1,4 @@
-﻿// -novid -tickrate 128
+﻿// -novid -tickrate 128 +exec eth.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -174,7 +174,7 @@ mm_dedicated_search_maxping		"55"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"0.8"
+sensitivity						"0.7"
 zoom_sensitivity_ratio_mouse	"1.3"
 m_rawinput						"1"
 
