--- a/eth.cfg
+++ b/eth.cfg
@@ -57,25 +57,39 @@ bind "F6"						"incrementvar volume 0.05 0.6 0.55"
 bind "F7"						"disconnect"
 bind "F8"						"quit"
 
+alias crosshair_change 			crosshair_small
+alias "crosshair_small"			"cl_crosshairsize 2;cl_crosshairgap -3;cl_crosshairthickness 0.5;alias crosshair_change crosshair_large"
+alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;cl_crosshairthickness 1.0;alias crosshair_change crosshair_small"
+bind "F9"						"crosshair_change"
 
 
 //---------------------------------------------------------------------------------CROSSHAIR
 
+cl_crosshairstyle				"4"
 cl_crosshairalpha				"255"
 cl_crosshaircolor_b				"0"
 cl_crosshaircolor_g				"0"
 cl_crosshaircolor_r				"255"
 cl_crosshaircolor				"4"
-cl_crosshairdot					"0"
-cl_crosshairgap					"-3"
-cl_crosshairsize				"3"
-cl_crosshairstyle				"4"
 cl_crosshairusealpha			"1"
-cl_crosshairthickness			"0.5"
 cl_fixedcrosshairgap			"-1"
-cl_crosshair_outlinethickness	"1"
+cl_crosshairdot					"0"
 cl_crosshair_drawoutline		"0"
 cl_crosshair_sniper_width		"2"
+cl_crosshair_dynamic_maxdist_splitratio			"0.35"
+cl_crosshair_dynamic_splitalpha_innermod		"1"
+cl_crosshair_dynamic_splitalpha_outermod		"0.5"
+cl_crosshair_dynamic_splitdist					"7"
+
+//SMALL CROSSHAIR
+cl_crosshairsize				"2"
+cl_crosshairgap					"-3"
+cl_crosshairthickness			"0.5"
+
+//LARGE CROSSHAIR
+cl_crosshairsize				"3"
+cl_crosshairgap					"-2"
+cl_crosshairthickness			"1"
 
 
 
