Alterado sens para 1.5 | Crosshair thickness para 0.5

--- a/eth.cfg
+++ b/eth.cfg
@@ -30,6 +30,7 @@ bind "space"					"+voicerecord"
 bind "mwheeldown"				"+jump"
 bind "mwheelup"                	"r_cleardecals"
 bind "n"                		"+lookatweapon"
+bind "tab"						"+showscores;r_cleardecals"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000"
 alias "-nadecrosshair"			"cl_crosshairsize 3"
@@ -58,9 +59,9 @@ bind "F7"						"disconnect"
 bind "F8"						"quit"
 
 alias crosshair_change 			crosshair_small
-alias "crosshair_small"			"cl_crosshairsize 2;cl_crosshairgap -3;cl_crosshairthickness 0.5;alias crosshair_change crosshair_large"
-alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;cl_crosshairthickness 1.0;alias crosshair_change crosshair_small"
-bind "F9"						"crosshair_change"
+alias "crosshair_small"			"cl_crosshairsize 2;cl_crosshairgap -3;alias crosshair_change crosshair_large"
+alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;alias crosshair_change crosshair_small"
+bind "mwheelup"					"crosshair_change"
 
 
 //---------------------------------------------------------------------------------CROSSHAIR
@@ -73,6 +74,7 @@ cl_crosshaircolor_r				"255"
 cl_crosshaircolor				"4"
 cl_crosshairusealpha			"1"
 cl_fixedcrosshairgap			"-1"
+cl_crosshairthickness			"0.5"
 cl_crosshairdot					"0"
 cl_crosshair_drawoutline		"0"
 cl_crosshair_sniper_width		"2"
@@ -84,12 +86,10 @@ cl_crosshair_dynamic_splitdist					"7"
 //SMALL CROSSHAIR
 cl_crosshairsize				"2"
 cl_crosshairgap					"-3"
-cl_crosshairthickness			"0.5"
 
 //LARGE CROSSHAIR
 cl_crosshairsize				"3"
 cl_crosshairgap					"-2"
-cl_crosshairthickness			"1"
 
 
 
@@ -188,7 +188,7 @@ mm_dedicated_search_maxping		"55"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"0.8"
+sensitivity						"0.75"
 zoom_sensitivity_ratio_mouse	"1.3"
 m_rawinput						"1"
 
