Adicionado comando da sensibilidade do mic

--- a/eth.cfg
+++ b/eth.cfg
@@ -217,6 +217,8 @@ snd_mute_mvp_music_live_players	"1"
 snd_mvp_volume					"0"
 snd_hwcompat					"1"
 
+voice_mixer_volume				"0.8"
+
 
 
 //---------------------------------------------------------------------------------DESEMPENHO
