--- a/eth.cfg
+++ b/eth.cfg
@@ -116,11 +116,12 @@ cl_bobcycle						"2"
 //---------------------------------------------------------------------------------RADAR
 
 cl_radar_scale					"0.35"
-cl_hud_radar_scale				"1.3"
+cl_hud_radar_scale				"1"
 cl_radar_icon_scale_min			"1"
 cl_radar_always_centered		"1"
 cl_teammate_colors_show			"1"
 cl_radar_rotate					"1"
+cl_radar_square_with_scoreboard	"0"
 
 
 
@@ -142,15 +143,15 @@ net_scale						"5"
 
 //---------------------------------------------------------------------------------HUD
 
-hud_scaling						"0.8"
-safezonex						"0.90"
+hud_scaling						"0.95"
+safezonex						"0.9"
 safezoney						"1"
 cl_showloadout					"1"
-mat_monitorgamma				"1.6"
+mat_monitorgamma				"2"
 mat_monitorgamma_tv_enabled		"0"
 cl_hud_background_alpha			"0.5"
 cl_hud_playercount_showcount	"0"
-cl_hud_color					"10"
+cl_hud_color					"2"
 cl_hud_healthammo_style			"1"
 cl_hud_playercount_pos			"0"
 cl_hud_bomb_under_radar			"0"
@@ -175,20 +176,17 @@ ui_steam_overlay_notification_position	"topleft"
 //---------------------------------------------------------------------------------REDE
 
 rate							"786432"
-cl_updaterate					"128"		//CONFERIR VALORES
-//cl_interp_ratio				"1"			//CONFERIR VALORES
-//cl_interp						"0"			//CONFERIR VALORES
-//cl_lagcompensation			"1"			//CONFERIR VALORES
-//cl_predict					"1"			//CONFERIR VALORES
-//cl_predictweapons				"1"			//CONFERIR VALORES
+cl_updaterate					"128"
+cl_interp						"0.031"
+cl_interp_ratio					"2"
 cl_cmdrate						"128"
-mm_dedicated_search_maxping		"55"
+mm_dedicated_search_maxping		"50"
 
 
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"0.775"
+sensitivity						"0.75"
 zoom_sensitivity_ratio_mouse	"1.3"
 m_rawinput						"1"
 
@@ -215,9 +213,14 @@ snd_deathcamera_volume			"0"
 snd_mute_losefocus				"0"
 snd_mute_mvp_music_live_players	"1"
 snd_mvp_volume					"0"
-snd_hwcompat					"1"
+snd_hwcompat					"0"
 
 voice_mixer_volume				"0.8"
+
+snd_mixahead					"0.05"	//CONFIG DEVICE // sound delay
+snd_headphone_pan_exponent		"2"		//CONFIG DEVICE
+snd_headphone_pan_radial_weight	"2"		//CONFIG DEVICE
+dsp_enhance_stereo				"0"		//CONFIG DEVICE
 
 
 
