--- a/eth.cfg
+++ b/eth.cfg
@@ -59,8 +59,8 @@ bind "F7"						"disconnect"
 bind "F8"						"quit"
 
 alias crosshair_change 			crosshair_small
-alias "crosshair_small"			"cl_crosshairsize 2;cl_crosshairgap -3;alias crosshair_change crosshair_large"
-alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;alias crosshair_change crosshair_small"
+alias "crosshair_small"			"cl_crosshairsize 1;alias crosshair_change crosshair_large"
+alias "crosshair_large"			"cl_crosshairsize 3;alias crosshair_change crosshair_small"
 bind "mwheelup"					"crosshair_change"
 
 
@@ -73,6 +73,7 @@ cl_crosshaircolor_g				"0"
 cl_crosshaircolor_r				"255"
 cl_crosshaircolor				"4"
 cl_crosshairusealpha			"1"
+cl_crosshairgap					"-2"
 cl_fixedcrosshairgap			"-1"
 cl_crosshairthickness			"0.5"
 cl_crosshairdot					"0"
@@ -84,12 +85,10 @@ cl_crosshair_dynamic_splitalpha_outermod		"0.5"
 cl_crosshair_dynamic_splitdist					"7"
 
 //SMALL CROSSHAIR
-cl_crosshairsize				"2"
-cl_crosshairgap					"-3"
+cl_crosshairsize				"1"
 
 //LARGE CROSSHAIR
 cl_crosshairsize				"3"
-cl_crosshairgap					"-2"
 
 
 
@@ -186,7 +185,7 @@ mm_dedicated_search_maxping		"50"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"0.75"
+sensitivity						"0.8"
 zoom_sensitivity_ratio_mouse	"1.3"
 m_rawinput						"1"
 
