Alterado comando de inicialização para moresco.cfg

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -1,4 +1,4 @@
-﻿// -novid -tickrate 128 +exec eth.cfg
+﻿// -novid -tickrate 128 +exec moresco.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
