--- a/moresco.cfg
+++ b/moresco.cfg
@@ -1,4 +1,4 @@
-﻿// -novid -tickrate 128 +exec moresco.cfg
+﻿//-novid -tickrate 128 -allow_third_party_software +exec moresco.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -33,7 +33,7 @@ bind "n"                		"+lookatweapon"
 bind "tab"						"+showscores;r_cleardecals"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000"
-alias "-nadecrosshair"			"cl_crosshairsize 3"
+alias "-nadecrosshair"			"cl_crosshairsize 2"
 bind "capslock"					"+nadecrosshair"
 
 alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
@@ -49,6 +49,8 @@ alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
 alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
 bind "3"						"slot3_config"
 
+bind "mwheelup"					"incrementvar cl_radar_scale 0.4 1 0.6"
+
 bind "F1"						"demo_pause"
 bind "F2"						"demo_resume"
 bind "F3"						"demo_timescale 1"
@@ -58,10 +60,6 @@ bind "F6"						"incrementvar volume 0.05 0.6 0.55"
 bind "F7"						"disconnect"
 bind "F8"						"quit"
 
-alias crosshair_change 			crosshair_small
-alias "crosshair_small"			"cl_crosshairsize 1;alias crosshair_change crosshair_large"
-alias "crosshair_large"			"cl_crosshairsize 3;alias crosshair_change crosshair_small"
-bind "mwheelup"					"crosshair_change"
 
 
 //---------------------------------------------------------------------------------CROSSHAIR
@@ -74,6 +72,7 @@ cl_crosshaircolor_r				"255"
 cl_crosshaircolor				"4"
 cl_crosshairusealpha			"1"
 cl_crosshairgap					"-2"
+cl_crosshairsize				"2"
 cl_fixedcrosshairgap			"-1"
 cl_crosshairthickness			"0.5"
 cl_crosshairdot					"0"
@@ -83,12 +82,6 @@ cl_crosshair_dynamic_maxdist_splitratio			"0.35"
 cl_crosshair_dynamic_splitalpha_innermod		"1"
 cl_crosshair_dynamic_splitalpha_outermod		"0.5"
 cl_crosshair_dynamic_splitdist					"7"
-
-//SMALL CROSSHAIR
-cl_crosshairsize				"1"
-
-//LARGE CROSSHAIR
-cl_crosshairsize				"3"
 
 
 
@@ -114,7 +107,7 @@ cl_bobcycle						"2"
 
 //---------------------------------------------------------------------------------RADAR
 
-cl_radar_scale					"0.35"
+cl_radar_scale					"0.4"
 cl_hud_radar_scale				"1"
 cl_radar_icon_scale_min			"1"
 cl_radar_always_centered		"1"
@@ -185,8 +178,8 @@ mm_dedicated_search_maxping		"50"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"0.8"
-zoom_sensitivity_ratio_mouse	"1.3"
+sensitivity						"1.35"
+zoom_sensitivity_ratio_mouse	"1.2"
 m_rawinput						"1"
 
 m_customaccel					"0"
