Altarado crosshair | Adicionado m_yaw 0.0165 na sens

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -33,7 +33,7 @@ bind "n"                		"+lookatweapon"
 bind "tab"						"+showscores;r_cleardecals"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000"
-alias "-nadecrosshair"			"cl_crosshairsize 2"
+alias "-nadecrosshair"			"cl_crosshairsize 1"
 bind "capslock"					"+nadecrosshair"
 
 alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
@@ -48,6 +48,11 @@ alias "back_config_slot1"		"slot1;bind mouse5 +qq_slot1"
 alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
 alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
 bind "3"						"slot3_config"
+
+//alias crosshair_change 			crosshair_small
+//alias "crosshair_small"			"cl_crosshairstyle 5;cl_crosshairsize 2;cl_crosshairgap -8;cl_crosshairthickness 0.5;alias crosshair_change crosshair_large"
+//alias "crosshair_large"			"cl_crosshairstyle 4;cl_crosshairsize 3;cl_crosshairgap -2;cl_crosshairthickness 1;alias crosshair_change crosshair_small"
+//bind "F9"						"crosshair_change"
 
 bind "mwheelup"					"incrementvar cl_radar_scale 0.4 1 0.6"
 
@@ -65,19 +70,21 @@ bind "F8"						"quit"
 //---------------------------------------------------------------------------------CROSSHAIR
 
 cl_crosshairstyle				"4"
+cl_crosshairgap					"-3"
+cl_crosshairsize				"1"
+cl_crosshairthickness			"1"
+cl_crosshair_sniper_width		"2"
+
 cl_crosshairalpha				"255"
 cl_crosshaircolor_b				"0"
 cl_crosshaircolor_g				"0"
 cl_crosshaircolor_r				"255"
-cl_crosshaircolor				"4"
+cl_crosshaircolor				"2"
 cl_crosshairusealpha			"1"
-cl_crosshairgap					"-2"
-cl_crosshairsize				"2"
-cl_fixedcrosshairgap			"-1"
-cl_crosshairthickness			"0.5"
+
 cl_crosshairdot					"0"
+cl_fixedcrosshairgap			"-1"
 cl_crosshair_drawoutline		"0"
-cl_crosshair_sniper_width		"2"
 cl_crosshair_dynamic_maxdist_splitratio			"0.35"
 cl_crosshair_dynamic_splitalpha_innermod		"1"
 cl_crosshair_dynamic_splitalpha_outermod		"0.5"
@@ -161,7 +168,7 @@ cl_disablefreezecam				"0"
 con_enable						"1"
 r_drawtracers_firstperson		"1"
 mapoverview_allow_client_draw	"1"
-ui_steam_overlay_notification_position	"topleft"
+ui_steam_overlay_notification_position	"bottomleft"
 
 
 
@@ -178,8 +185,10 @@ mm_dedicated_search_maxping		"50"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"1.35"
+sensitivity						"2.2"
+m_yaw							"0.0165"
 zoom_sensitivity_ratio_mouse	"1.2"
+
 m_rawinput						"1"
 
 m_customaccel					"0"
@@ -220,7 +229,7 @@ dsp_enhance_stereo				"0"		//CONFIG DEVICE
 
 mat_queue_mode					"-1"
 cl_disablehtmlmotd				"1"
-cl_forcepreload					"1"
+cl_forcepreload					"0"
 r_dynamic						"0"
 
 
