Retirado binds laterais do mouse | Alterado sens para 2

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -32,27 +32,13 @@ bind "mwheelup"                	"r_cleardecals"
 bind "n"                		"+lookatweapon"
 bind "tab"						"+showscores;r_cleardecals"
 
+unbind mouse4
+unbind mouse5
+bind "3"						"slot3;+lookatweapon"
+
 alias "+nadecrosshair"			"cl_crosshairsize 1000"
 alias "-nadecrosshair"			"cl_crosshairsize 1"
 bind "capslock"					"+nadecrosshair"
-
-alias "+qq_slot1"				"slot3;bind mouse4 back_config_slot2"
-alias "-qq_slot1"				"slot1"
-bind "mouse5"					"+qq_slot1"
-	
-alias "+qq_slot2"				"slot3;bind mouse5 back_config_slot1"
-alias "-qq_slot2"				"slot2"
-bind "mouse4"					"+qq_slot2"
-
-alias "back_config_slot1"		"slot1;bind mouse5 +qq_slot1"
-alias "back_config_slot2"		"slot2;bind mouse4 +qq_slot2"
-alias "slot3_config"			"slot3;+lookatweapon;bind mouse5 back_config_slot1;bind mouse4 back_config_slot2"
-bind "3"						"slot3_config"
-
-//alias crosshair_change 			crosshair_small
-//alias "crosshair_small"			"cl_crosshairstyle 5;cl_crosshairsize 2;cl_crosshairgap -8;cl_crosshairthickness 0.5;alias crosshair_change crosshair_large"
-//alias "crosshair_large"			"cl_crosshairstyle 4;cl_crosshairsize 3;cl_crosshairgap -2;cl_crosshairthickness 1;alias crosshair_change crosshair_small"
-//bind "F9"						"crosshair_change"
 
 bind "mwheelup"					"incrementvar cl_radar_scale 0.4 1 0.6"
 
@@ -185,8 +171,8 @@ mm_dedicated_search_maxping		"50"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"2.2"
-m_yaw							"0.0165"
+sensitivity						"2"
+m_yaw							"0.022"
 zoom_sensitivity_ratio_mouse	"1.2"
 
 m_rawinput						"1"
