Alterado sens para 1.7

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -1,4 +1,4 @@
-﻿//-novid -tickrate 128 -allow_third_party_software +exec moresco.cfg
+//-novid -tickrate 128 -allow_third_party_software +exec moresco.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -171,16 +171,17 @@ mm_dedicated_search_maxping		"50"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity						"2"
+sensitivity						"1.7"
 m_yaw							"0.022"
-zoom_sensitivity_ratio_mouse	"1.2"
+zoom_sensitivity_ratio_mouse	"1.4"
 
 m_rawinput						"1"
 
 m_customaccel					"0"
-m_customaccel_exponent			"1"
+m_customaccel_exponent			"1.1"
 m_customaccel_max				"0"
-m_customaccel_scale				"0"
+m_customaccel_scale				"0.04"
+m_mousespeed					"1"
 m_mouseaccel1					"0"
 m_mouseaccel2					"0"
 
@@ -202,7 +203,7 @@ snd_mute_mvp_music_live_players	"1"
 snd_mvp_volume					"0"
 snd_hwcompat					"0"
 
-voice_mixer_volume				"1"
+voice_mixer_volume				"0.8"
 
 snd_mixahead					"0.05"	//CONFIG DEVICE // sound delay
 snd_headphone_pan_exponent		"2"		//CONFIG DEVICE
