Alterado crosshair e binds

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -1,4 +1,4 @@
-//-novid -tickrate 128 -allow_third_party_software +exec moresco.cfg
+//-novid -tickrate 128 -allow_third_party_software +exec moresco.cfg +clientport 27006
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -37,10 +37,15 @@ unbind mouse5
 bind "3"						"slot3;+lookatweapon"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000"
-alias "-nadecrosshair"			"cl_crosshairsize 1"
+alias "-nadecrosshair"			"cl_crosshairsize 3"
 bind "capslock"					"+nadecrosshair"
 
-bind "mwheelup"					"incrementvar cl_radar_scale 0.4 1 0.6"
+alias crosshair_change 			crosshair_small
+alias "crosshair_small"			"cl_crosshairsize 1;cl_crosshairgap -3;cl_crosshairthickness 0.5;alias crosshair_change crosshair_large"
+alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;cl_crosshairthickness 1;alias crosshair_change crosshair_small"
+bind "mouse5"					"crosshair_change"
+
+bind "mwheelup"					"incrementvar cl_ 0.4 1 0.6;"
 
 bind "F1"						"demo_pause"
 bind "F2"						"demo_resume"
@@ -56,8 +61,8 @@ bind "F8"						"quit"
 //---------------------------------------------------------------------------------CROSSHAIR
 
 cl_crosshairstyle				"4"
-cl_crosshairgap					"-3"
-cl_crosshairsize				"1"
+cl_crosshairgap					"-2"
+cl_crosshairsize				"3"
 cl_crosshairthickness			"1"
 cl_crosshair_sniper_width		"2"
 
