--- a/moresco.cfg
+++ b/moresco.cfg
@@ -32,8 +32,6 @@ bind "mwheelup"                	"r_cleardecals"
 bind "n"                		"+lookatweapon"
 bind "tab"						"+showscores;r_cleardecals"
 
-unbind mouse4
-unbind mouse5
 bind "3"						"slot3;+lookatweapon"
 
 alias "+nadecrosshair"			"cl_crosshairsize 1000"
@@ -41,9 +39,11 @@ alias "-nadecrosshair"			"cl_crosshairsize 3"
 bind "capslock"					"+nadecrosshair"
 
 alias crosshair_change 			crosshair_small
-alias "crosshair_small"			"cl_crosshairsize 1;cl_crosshairgap -3;cl_crosshairthickness 0.5;alias crosshair_change crosshair_large"
-alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;cl_crosshairthickness 1;alias crosshair_change crosshair_small"
+alias "crosshair_small"			"cl_crosshairsize 1;cl_crosshairgap -3;alias crosshair_change crosshair_large"
+alias "crosshair_large"			"cl_crosshairsize 3;cl_crosshairgap -2;alias crosshair_change crosshair_small"
 bind "mouse5"					"crosshair_change"
+
+bind "mouse4"					"say .say"
 
 bind "mwheelup"					"incrementvar cl_ 0.4 1 0.6;"
 
@@ -63,7 +63,7 @@ bind "F8"						"quit"
 cl_crosshairstyle				"4"
 cl_crosshairgap					"-2"
 cl_crosshairsize				"3"
-cl_crosshairthickness			"1"
+cl_crosshairthickness			"0.5"
 cl_crosshair_sniper_width		"2"
 
 cl_crosshairalpha				"255"
