Inserido bind do radar novamente

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -45,7 +45,7 @@ bind "mouse5"           "crosshair_change"
 
 bind "mouse4"           "say .say"
 
-bind "mwheelup"         "incrementvar cl_ 0.4 1 0.6;"
+bind "mwheelup"         "incrementvar cl_radar_scale 0.4 1 0.6"
 
 bind "F1"               "demo_pause"
 bind "F2"               "demo_resume"
@@ -63,7 +63,7 @@ bind "F8"               "quit"
 cl_crosshairstyle                        "4"
 cl_crosshairgap                          "-2"
 cl_crosshairsize                         "3"
-cl_crosshairthickness                    "0.5"
+cl_crosshairthickness                    "1"
 cl_crosshair_sniper_width                "2"
 
 cl_crosshairalpha                        "255"
@@ -178,7 +178,7 @@ mm_dedicated_search_maxping "50"
 
 sensitivity                  "1.7"
 m_yaw                        "0.022"
-zoom_sensitivity_ratio_mouse "1.4"
+zoom_sensitivity_ratio_mouse "1.2"
 
 m_rawinput                   "1"
 
