Alterado binds de comprar arma e granada

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -2,37 +2,55 @@
 
 //---------------------------------------------------------------------------------BINDS
 
+echo ""
 clear
+echo "---------------------------------------------------------"
+echo "|             | PrintScreen | Scroll Lock | Pause Break |"
+echo "|             |             |   COLETE1   |   COLETE2   |"
+echo "|-------------|-------------|-------------|-------------|"
+echo "|  Backspace  |    Insert   |     Home    |   Page Up   |"
+echo "|    DEFUSE   |     P250    |   CZ/TEC9   |    DEAGLE   |"
+echo "|-------------|-------------|-------------|-------------|"
+echo "|             |    Delete   |     End     |  Page Down  |"
+echo "|             | GALIL/FAMAS |   AK/COLT   |     AWP     |"
+echo "|             ------------------------------------------|"
+echo "|                                                       |"
+echo "|                                                       |"
+echo "|                           ---------------             |"
+echo "|                           |      Up     |             |"
+echo "|                           |   MOLOTOV   |             |"
+echo "|             --------------|-------------|-------------|"
+echo "|             |     Left    |     Down    |    Right    |"
+echo "|             |    FLASH    |      HE     |    SMOKE    |"
+echo "---------------------------------------------------------"
 
-
-bind "scrolllock"       "buy vest"                   //"ScrollLock"
-bind "numlock"          "buy vesthelm"               //"PauseBreak"
-bind "del"              "buy mac10;buy mp9"          //"delete"
-bind "end"              "buy m4a1;buy ak47"          //"end"
-bind "pgdn"             "buy awp"                    //"page down"
-bind "ins"              "buy p250"                   //"insert"
-bind "home"             "buy tec9;buy fiveseven"     //"home"
-bind "pgup"             "buy deagle"                 //"page up"
-bind "leftarrow"        "buy flashbang"              //"left arrow"
-bind "downarrow"        "buy hegrenade"              //"down arrow"
-bind "rightarrow"       "buy smokegrenade"           //"right arrow"
-bind "uparrow"          "buy incgrenade;buy molotov" //"up arrow"
 bind "backspace"        "buy defuser"                //"Backspace"
+bind "scrolllock"       "buy vest"                   //"Scroll Lock"
+bind "numlock"          "buy vesthelm"               //"Pause Break"
+bind "ins"              "buy p250"                   //"Insert"
+bind "home"             "buy tec9;buy fiveseven"     //"Home"
+bind "pgup"             "buy deagle"                 //"Page Up"
+bind "del"              "buy galilar;buy famas"      //"Delete"
+bind "end"              "buy m4a1;buy ak47"          //"End"
+bind "pgdn"             "buy awp"                    //"Page Down"
+bind "uparrow"          "buy incgrenade;buy molotov" //"Up Arrow"
+bind "leftarrow"        "buy flashbang"              //"Left Arow"
+bind "downarrow"        "buy hegrenade"              //"Down Arow"
+bind "rightarrow"       "buy smokegrenade"           //"Right Arrow"
 
 bind "v"                "+jump;-attack;-jump"
-bind "f"                "use weapon_flashbang"
+bind "3"                "slot3;+lookatweapon"
 bind "4"                "use weapon_hegrenade"
+bind "f"                "use weapon_flashbang"
 bind "z"                "use weapon_incgrenade;use weapon_molotov"
 bind "x"                "use weapon_decoy;noclip"
 bind "c"                "use weapon_smokegrenade"
 bind "alt"              "+jump"
 bind "space"            "+voicerecord"
 bind "mwheeldown"       "+jump"
-bind "mwheelup"         "r_cleardecals"
+bind "mwheelup"         "incrementvar cl_radar_scale 0.4 1 0.6"
 bind "n"                "+lookatweapon"
 bind "tab"              "+showscores;r_cleardecals"
-
-bind "3"                "slot3;+lookatweapon"
 
 alias "+nadecrosshair"  "cl_crosshairsize 1000"
 alias "-nadecrosshair"  "cl_crosshairsize 3"
@@ -45,8 +63,6 @@ bind "mouse5"           "crosshair_change"
 
 bind "mouse4"           "say .say"
 
-bind "mwheelup"         "incrementvar cl_radar_scale 0.4 1 0.6"
-
 bind "F1"               "demo_pause"
 bind "F2"               "demo_resume"
 bind "F3"               "demo_timescale 1"
@@ -55,6 +71,24 @@ bind "F5"               "mp_restartgame 1"
 bind "F6"               "incrementvar volume 0.05 0.6 0.55"
 bind "F7"               "disconnect"
 bind "F8"               "quit"
+
+
+
+//---------------------------------------------------------------------------------MOUSE
+
+sensitivity                  "1.7"
+m_yaw                        "0.022"
+zoom_sensitivity_ratio_mouse "1.2"
+
+m_rawinput                   "1"
+
+m_customaccel                "0"
+m_customaccel_exponent       "1.1"
+m_customaccel_max            "0"
+m_customaccel_scale          "0.04"
+m_mousespeed                 "1"
+m_mouseaccel1                "0"
+m_mouseaccel2                "0"
 
 
 
@@ -171,24 +205,6 @@ cl_interp                   "0.031"
 cl_interp_ratio             "2"
 cl_cmdrate                  "128"
 mm_dedicated_search_maxping "50"
-
-
-
-//---------------------------------------------------------------------------------MOUSE
-
-sensitivity                  "1.7"
-m_yaw                        "0.022"
-zoom_sensitivity_ratio_mouse "1.2"
-
-m_rawinput                   "1"
-
-m_customaccel                "0"
-m_customaccel_exponent       "1.1"
-m_customaccel_max            "0"
-m_customaccel_scale          "0.04"
-m_mousespeed                 "1"
-m_mouseaccel1                "0"
-m_mouseaccel2                "0"
 
 
 
