Alterado bindings e sens

--- a/moresco.cfg
+++ b/moresco.cfg
@@ -1,4 +1,4 @@
-//-novid -tickrate 128 -allow_third_party_software +exec moresco.cfg +clientport 27006
+//-novid -tickrate 128 -allow_third_party_software +clientport 27006 +exec moresco.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -51,17 +51,12 @@ bind "mwheeldown"       "+jump"
 bind "mwheelup"         "incrementvar cl_radar_scale 0.4 1 0.6"
 bind "n"                "+lookatweapon"
 bind "tab"              "+showscores;r_cleardecals"
+bind "mouse4"           "say .say"
+bind "mouse5"           "incrementvar voice_enable 0 1 1"
 
 alias "+nadecrosshair"  "cl_crosshairsize 1000"
-alias "-nadecrosshair"  "cl_crosshairsize 3"
+alias "-nadecrosshair"  "cl_crosshairsize 1"
 bind "capslock"         "+nadecrosshair"
-
-alias crosshair_change  crosshair_small
-alias "crosshair_small" "cl_crosshairsize 1;cl_crosshairgap -3;alias crosshair_change crosshair_large"
-alias "crosshair_large" "cl_crosshairsize 3;cl_crosshairgap -2;alias crosshair_change crosshair_small"
-bind "mouse5"           "crosshair_change"
-
-bind "mouse4"           "say .say"
 
 bind "F1"               "demo_pause"
 bind "F2"               "demo_resume"
@@ -76,9 +71,9 @@ bind "F8"               "quit"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity                  "1.7"
+sensitivity                  "1.8"
 m_yaw                        "0.022"
-zoom_sensitivity_ratio_mouse "1.2"
+zoom_sensitivity_ratio_mouse "1"
 
 m_rawinput                   "1"
 
@@ -95,8 +90,8 @@ m_mouseaccel2                "0"
 //---------------------------------------------------------------------------------CROSSHAIR
 
 cl_crosshairstyle                        "4"
-cl_crosshairgap                          "-2"
-cl_crosshairsize                         "3"
+cl_crosshairgap                          "-3"
+cl_crosshairsize                         "1"
 cl_crosshairthickness                    "1"
 cl_crosshair_sniper_width                "2"
 
