--- a/eth.cfg
+++ b/eth.cfg
@@ -1,4 +1,4 @@
-//-novid -tickrate 128 -allow_third_party_software +clientport 27006 +exec moresco.cfg
+//-novid -tickrate 128 -allow_third_party_software +clientport 27006 +exec eth.cfg
 
 //---------------------------------------------------------------------------------BINDS
 
@@ -71,7 +71,7 @@ bind "F8"               "quit"
 
 //---------------------------------------------------------------------------------MOUSE
 
-sensitivity                  "1.8"
+sensitivity                  "1.7"
 m_yaw                        "0.022"
 zoom_sensitivity_ratio_mouse "1"
 
@@ -211,7 +211,7 @@ snd_mapobjective_volume         "0"
 snd_tensecondwarning_volume     "0.1"
 snd_deathcamera_volume          "0"
 snd_mute_losefocus              "0"
-snd_mute_mvp_music_live_players "1"
+snd_mute_mvp_music_live_players "0"
 snd_mvp_volume                  "0"
 snd_hwcompat                    "0"
 
