--- a/eth.cfg
+++ b/eth.cfg
@@ -51,12 +51,14 @@ bind "mwheeldown"       "+jump"
 bind "mwheelup"         "incrementvar cl_radar_scale 0.4 1 0.6"
 bind "n"                "+lookatweapon"
 bind "tab"              "+showscores;r_cleardecals"
-bind "mouse4"           "say .say"
-bind "mouse5"           "incrementvar voice_enable 0 1 1"
 
 alias "+nadecrosshair"  "cl_crosshairsize 1000"
 alias "-nadecrosshair"  "cl_crosshairsize 1"
-bind "capslock"         "+nadecrosshair"
+bind "mouse5"           "+nadecrosshair"
+
+alias "dotcrosshair"  "cl_crosshairgap -6;cl_crosshairthickness 0.5;cl_crosshairdot 1;bind capslock defcrosshair"
+alias "defcrosshair"  "cl_crosshairgap -3;cl_crosshairthickness 1.0;cl_crosshairdot 0;bind capslock dotcrosshair"
+bind "capslock"        "dotcrosshair"
 
 bind "F1"               "demo_pause"
 bind "F2"               "demo_resume"
@@ -90,21 +92,24 @@ m_mouseaccel2                "0"
 //---------------------------------------------------------------------------------CROSSHAIR
 
 cl_crosshairstyle                        "4"
-cl_crosshairgap                          "-3"
 cl_crosshairsize                         "1"
-cl_crosshairthickness                    "1"
 cl_crosshair_sniper_width                "2"
-
+cl_crosshair_drawoutline                 "0"
 cl_crosshairalpha                        "255"
 cl_crosshaircolor_b                      "0"
 cl_crosshaircolor_g                      "0"
 cl_crosshaircolor_r                      "255"
 cl_crosshaircolor                        "2"
 cl_crosshairusealpha                     "1"
-
-cl_crosshairdot                          "0"
 cl_fixedcrosshairgap                     "-1"
-cl_crosshair_drawoutline                 "0"
+
+cl_crosshairgap                          "-3"
+cl_crosshairthickness                    "1"
+cl_crosshairdot                          "0"
+
+//cl_crosshairgap                          "-6"
+//cl_crosshairthickness                    "0.5"
+//cl_crosshairdot                          "1"
 
 
 
@@ -221,10 +226,11 @@ voice_mixer_volume              "0.8"
 
 //---------------------------------------------------------------------------------DESEMPENHO
 
-mat_queue_mode     "-1"
-cl_disablehtmlmotd "1"
-cl_forcepreload    "0"
-r_dynamic          "0"
+mat_queue_mode         "-1"
+cl_disablehtmlmotd     "1"
+cl_forcepreload        "0"
+r_dynamic              "0"
+cl_threaded_bone_setup "1"
 
 
 
